--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "my-react-redux-boilerplate",
+  "name": "simple-cars-manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
-    "axios": "^0.17.1",
+    "axios": "^0.19.2",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -30,7 +30,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "json-server": "^0.12.1",
+    "json-server": "^0.16.1",
     "less": "^3.0.0",
     "less-loader": "^4.0.5",
     "object-assign": "4.1.1",
@@ -40,8 +40,8 @@
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^16.2.0",
-    "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.2.0",
+    "react-dev-utils": "^5.0.3",
+    "react-dom": "^16.13.1",
     "react-modal": "^3.2.1",
     "react-number-format": "^3.1.6",
     "react-redux": "^5.0.6",
@@ -57,7 +57,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "server": "node ./node_modules/json-server/bin fakeServer/cars.json -p 7171",
+    "server": "json-server fakeServer/cars.json --watch -p 7171",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
